<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="fr.enlight.anima.cardmodel.model.spells.SpellType"/>

        <variable
            name="model"
            type="fr.enlight.anima.animamagiccards.ui.spells.viewmodels.SpellFilterViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/layout_overlay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/background_dark_transparent_70"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setVisibleWithAlpha="@{model.filterPanelVisible}"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/filters_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/spacing_xbig"
            android:layout_marginEnd="@dimen/spacing_big"
            android:layout_marginLeft="@dimen/spacing_big"
            android:layout_marginRight="@dimen/spacing_big"
            android:layout_marginStart="@dimen/spacing_big"
            android:background="@drawable/half_rounded_gray_rectangle"
            android:orientation="vertical"
            android:padding="@dimen/spacing_base"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:setVisibleAnimation="@{model.filterPanelVisible}"
            app:withCLayout="@{parentLayout}">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={model.searchWitDesc}"
                android:text="@string/Spell_Filter_Search_Description"
                android:textSize="@dimen/textSize_medium"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_large">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/spacing_base">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Spell_Filter_Type"
                        android:textSize="@dimen/textSize_medium"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/spacing_base">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/spacing_large"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:orientation="vertical">

                            <CheckBox
                                android:id="@+id/spell_type_attack"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="@{model.isSpellTypeChecked(SpellType.ATTACK)}"
                                android:onCheckedChanged="@{(cb, isChecked) -> model.onSpellTypeChecked(isChecked, SpellType.ATTACK)}"
                                android:text="@string/Spell_Filter_Type_Attack" />

                            <CheckBox
                                android:id="@+id/spell_type_defense"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="@{model.isSpellTypeChecked(SpellType.DEFENSE)}"
                                android:onCheckedChanged="@{(cb, isChecked) -> model.onSpellTypeChecked(isChecked, SpellType.DEFENSE)}"
                                android:text="@string/Spell_Filter_Type_Defense" />

                            <CheckBox
                                android:id="@+id/spell_type_effect"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="@{model.isSpellTypeChecked(SpellType.EFFECT)}"
                                android:onCheckedChanged="@{(cb, isChecked) -> model.onSpellTypeChecked(isChecked, SpellType.EFFECT)}"
                                android:text="@string/Spell_Filter_Type_Effect" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <CheckBox
                                android:id="@+id/spell_type_animismic"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="@{model.isSpellTypeChecked(SpellType.ANIMISTIC)}"
                                android:onCheckedChanged="@{(cb, isChecked) -> model.onSpellTypeChecked(isChecked, SpellType.ANIMISTIC)}"
                                android:text="@string/Spell_Filter_Type_Animismic" />

                            <CheckBox
                                android:id="@+id/spell_type_automatic"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="@{model.isSpellTypeChecked(SpellType.AUTOMATIC)}"
                                android:onCheckedChanged="@{(cb, isChecked) -> model.onSpellTypeChecked(isChecked, SpellType.AUTOMATIC)}"
                                android:text="@string/Spell_Filter_Type_Automatic" />

                            <CheckBox
                                android:id="@+id/spell_type_detection"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="@{model.isSpellTypeChecked(SpellType.DETECTION)}"
                                android:onCheckedChanged="@{(cb, isChecked) -> model.onSpellTypeChecked(isChecked, SpellType.DETECTION)}"
                                android:text="@string/Spell_Filter_Type_Detection" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_big"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/spacing_large"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:text="@string/Spell_Filter_Intelligence_Max"
                            android:textSize="@dimen/textSize_medium"
                            android:textStyle="bold" />

                        <EditText
                            android:layout_width="40dp"
                            android:layout_height="25dp"
                            android:background="@drawable/rounded_white_rectangle"
                            android:gravity="center"
                            android:inputType="numberDecimal"
                            android:text="@={model.intelligenceMax}"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/textSize_medium"
                            tools:text="20" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_base"
                        android:layout_marginStart="@dimen/spacing_base"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:text="@string/Spell_Filter_Max_Int_Description"
                        android:textSize="@dimen/textSize_regular"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_big"
                        android:text="@string/Spell_Filter_Zeon_Title"
                        android:textSize="@dimen/textSize_medium"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_base"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_base"
                        android:paddingStart="@dimen/spacing_base"
                        tools:ignore="RtlSymmetry">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/spacing_large"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:text="@string/Spell_Filter_Max_Zeon" />

                        <EditText
                            android:layout_width="40dp"
                            android:layout_height="25dp"
                            android:background="@drawable/rounded_white_rectangle"
                            android:gravity="center"
                            android:inputType="numberDecimal"
                            android:text="@={model.zeonMax}"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/textSize_medium"
                            tools:text="20" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_base"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingEnd="@dimen/spacing_base"
                        android:paddingLeft="@dimen/spacing_base"
                        android:paddingRight="@dimen/spacing_base"
                        android:paddingStart="@dimen/spacing_base">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/spacing_large"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:gravity="center"
                            android:text="@string/Spell_Filter_Max_Maintain" />

                        <EditText
                            android:layout_width="40dp"
                            android:layout_height="25dp"
                            android:background="@drawable/rounded_white_rectangle"
                            android:gravity="center"
                            android:inputType="numberDecimal"
                            android:text="@={model.retentionMax}"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/textSize_medium"
                            tools:text="5" />

                    </LinearLayout>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_base"
                        android:layout_marginStart="@dimen/spacing_base"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:checked="@={model.dailyRetentionOnly}"
                        android:text="@string/Spell_Filter_Daily_Maintain"
                        android:textSize="@dimen/textSize_regular"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_big"
                        android:text="@string/Spell_Filter_Action_Type"
                        android:textSize="@dimen/textSize_medium"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_base"
                        android:checkedButton="@={model.spellActionTypeSelectedId}"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/spell_action_type_all"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Common_All" />

                        <RadioButton
                            android:id="@+id/spell_action_type_passive"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginStart="@dimen/spacing_large"
                            android:text="@string/Spell_Filter_Action_Type_Passive" />

                        <RadioButton
                            android:id="@+id/spell_action_type_active"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginStart="@dimen/spacing_large"
                            android:text="@string/Spell_Filter_Action_Type_Active" />

                    </RadioGroup>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</layout>